# jrl-mathtools

./: .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  autogen.sh  cmake_uninstall.cmake.in  configure.ac  index.html  jrlMathTools.pc.cmake  jrlMathTools.pc.in
.travis/: after_success  before_install  build
CMakeModules/: FindBoostNumericBindings.cmake
debian/: changelog  control  copyright  libjrl-mathtools-doc.doc-base  libjrl-mathtools-doc.install  rules  watch
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile.am  footer.html  header.html  package.dox.cmake  package.dox.in
doc/additionalDoc/: package.h
doxygen/1.4.0.99/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.md5  a00017.md5  a00018.md5  a00019.map  a00019.md5  a00020.map  a00020.md5  a00021.map  a00021.md5  a00022.map  a00022.md5  a00023.md5  a00024.map  a00024.md5  a00025.md5  a00026.md5  a00027.md5  a00028.map  a00028.md5  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  annotated.html  (+18 more)
doxygen/1.4.0.99/pictures/: footer.txt
doxygen/HEAD/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00008.html  a00008.js  a00009.html  a00010.html  a00010.js  a00011.html  a00012.html  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00020.html  a00020.js  a00022.map  a00022.md5  a00023.html  a00023.md5  a00024.html  (+136 more)
doxygen/HEAD/doxygen-html/: angle_8hh.html  angle_8hh__incl.map  angle_8hh__incl.md5  annotated.html  classes.html  classjrlMathTools_1_1Angle-members.html  classjrlMathTools_1_1Angle.html  constants_8hh.html  constants_8hh__dep__incl.map  constants_8hh__dep__incl.md5  constants_8hh__incl.md5  deprecated_8hh.html  deprecated_8hh__dep__incl.map  deprecated_8hh__dep__incl.md5  deprecated_8hh__incl.map  deprecated_8hh__incl.md5  doc_8hh.html  files.html  functions.html  functions_func.html  functions_vars.html  fwd_8hh.html  fwd_8hh__dep__incl.map  fwd_8hh__dep__incl.md5  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  io_8hh.html  io_8hh__dep__incl.md5  io_8hh__incl.md5  main.html  mathtools_8hh.html  mathtools_8hh__incl.map  mathtools_8hh__incl.md5  matrix3x3_8hh.html  matrix3x3_8hh__dep__incl.map  matrix3x3_8hh__dep__incl.md5  (+38 more)
doxygen/HEAD/search/: all_5f.html  all_61.html  all_61.js  all_63.html  all_63.js  all_64.html  all_64.js  all_66.html  all_66.js  all_69.html  all_69.js  all_6a.html  all_6a.js  all_6d.html  all_6d.js  all_6f.html  all_6f.js  all_70.js  all_73.html  all_74.js  all_76.html  all_76.js  classes_61.html  classes_61.js  classes_6d.html  classes_6d.js  classes_76.html  classes_76.js  defines_6a.html  defines_6a.js  defines_6d.html  defines_6d.js  defines_76.html  defines_76.js  files_61.html  files_61.js  files_63.html  files_63.js  files_64.html  files_64.js  (+48 more)
include/: Makefile.am
include/jrl/: mathtools.hh
include/jrl/mathtools/: angle.hh  constants.hh  deprecated.hh  doc.hh  fwd.hh  io.hh  matrix3x3.hh  matrix4x4.hh  matrixNxP.hh  matrixnxp.hh  vector3.hh  vector4.hh  vectorN.hh  vectorn.hh
include/jrlMathTools/: TAGS  angle.h  deprecated.h  doc.h  fwd.h  jrlConstants.h  jrlMathTools.h  matrix3x3.h  matrix4x4.h  matrixNxP.h  vector3.h  vector4.h  vectorN.h
tests/: CMakeLists.txt  angle.cc  common.hh  damped-inverse.cc  matrix3x3.cc  matrix4x4.cc  optimized-JpJt.cc  pseudo-inverse.cc  vector3.cc  vector4.cc
unitTesting/: CMakeLists.txt  testDampedInverse.cpp  testOptimizedJpJt.cpp  testPseudoInverse.cpp  testpseudoinverse.cpp
